[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "downer"
version = "0.0.1"
authors = [
  { name="Trevor Corcoran", email="supershadowplay@gmail.com"},
]
description = "A Markdown to HTML converter"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/SuperShadowPlay/downer"
Issues = "https://github.com/SuperShadowPlay/downer/issues"